when saving check gets instantly updated to Checkbox status